[package]
name = "numeric_literals"
version = "0.1.0"
authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["visit-mut", "printing", "full", "parsing", "proc-macro", "clone-impls"]

[dev-dependencies]
num = "0.2.0"