[package]
name = "numeric_literals"
version = "0.1.0"
authors = ["Andreas Longva"]
license = "MIT"
repository = "https://github.com/Andlon/numeric_literals"
description = "Easily cope with numeric literals in generic Rust code"
readme = "README.md"
edition = "2018"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["visit-mut", "printing", "full", "parsing", "proc-macro", "clone-impls"]

[dev-dependencies]
num = "0.2.0"